--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,8 @@ dependencies {
             'io.github.bonigarcia:webdrivermanager:5.3.2',
             'org.aeonbits.owner:owner:1.0.4',
             'org.assertj:assertj-core:3.24.2',
-            'org.jsoup:jsoup:1.15.3'
+            'org.jsoup:jsoup:1.15.3',
+            'io.appium:java-client:8.3.0'
     )
     testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.9.2')
 }
@@ -69,6 +70,13 @@ task api(type: Test) {
         includeTags("api")
     }
 }
+
+task mobile(type: Test) {
+    useJUnitPlatform {
+        includeTags("mobile")
+    }
+}
+
 
 test {
     useJUnitPlatform()
