--- a/build.gradle
+++ b/build.gradle
@@ -31,53 +31,57 @@ tasks.withType(JavaCompile) {
 
 tasks.withType(Test) {
     systemProperties(System.getProperties())
-    useJUnitPlatform()
+    useJUnitPlatform {
+        if (System.getProperty("tag") != null && !System.getProperty("tag").isEmpty()) {
+            includeTags System.getProperty("tag")
+        }
 
-    testLogging {
-        lifecycle {
-            events "started", "skipped", "failed", "standard_error", "standard_out"
-            exceptionFormat "short"
+
+        testLogging {
+            lifecycle {
+                events "started", "skipped", "failed", "standard_error", "standard_out"
+                exceptionFormat "short"
+            }
         }
     }
-}
 
-dependencies {
-    testImplementation (
-            'org.junit.jupiter:junit-jupiter:5.9.2',
-            'io.rest-assured:rest-assured:5.3.0',
-            'com.codeborne:selenide:6.12.2',
-            'com.fasterxml.jackson.core:jackson-databind:2.14.1',
-            'org.slf4j:slf4j-simple:2.0.6',
-            'io.qameta.allure:allure-rest-assured:2.20.1',
-            'io.qameta.allure:allure-selenide:2.21.0',
-            'io.github.bonigarcia:webdrivermanager:5.3.2',
-            'org.aeonbits.owner:owner:1.0.4',
-            'org.assertj:assertj-core:3.24.2',
-            'org.jsoup:jsoup:1.15.3',
-            'io.appium:java-client:8.3.0'
-    )
-    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.9.2')
-}
-
-task ui(type: Test) {
-    useJUnitPlatform {
-        includeTags("ui")
+    dependencies {
+        testImplementation(
+                'org.junit.jupiter:junit-jupiter:5.9.2',
+                'io.rest-assured:rest-assured:5.3.0',
+                'com.codeborne:selenide:6.12.2',
+                'com.fasterxml.jackson.core:jackson-databind:2.14.1',
+                'org.slf4j:slf4j-simple:2.0.6',
+                'io.qameta.allure:allure-rest-assured:2.20.1',
+                'io.qameta.allure:allure-selenide:2.21.0',
+                'io.github.bonigarcia:webdrivermanager:5.3.2',
+                'org.aeonbits.owner:owner:1.0.4',
+                'org.assertj:assertj-core:3.24.2',
+                'org.jsoup:jsoup:1.15.3',
+                'io.appium:java-client:8.3.0'
+        )
+        testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.9.2')
     }
-}
 
-task api(type: Test) {
-    useJUnitPlatform {
-        includeTags("api")
+    task ui(type: Test) {
+        useJUnitPlatform {
+            includeTags("ui")
+        }
     }
-}
 
-task mobile(type: Test) {
-    useJUnitPlatform {
-        includeTags("mobile")
+    task api(type: Test) {
+        useJUnitPlatform {
+            includeTags("api")
+        }
     }
-}
+
+    task mobile(type: Test) {
+        useJUnitPlatform {
+            includeTags("mobile")
+        }
+    }
 
 
-test {
-    useJUnitPlatform()
-}
+    test {
+        useJUnitPlatform()
+    }
