--- a/src/test/resources/emulator.properties
+++ b/src/test/resources/emulator.properties
@@ -1,4 +1,4 @@
-deviceName=Pixel 4 API 31
+deviceName=Pixel 4 API 31 2
 platformVersion=12.0
 remoteURL=http://127.0.0.1:4723/wd/hub
 appURL=https://d.apkpure.com/b/APK/com.todoist?version=latest
